--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -78,6 +78,7 @@
       <div class="actions">
         <%= link_to '戻る', root_path, class: "back-btn" %>
       </div>
+      <div class="space"></div>
     </div>
   <% end %>
 </div>
