--- a/app/assets/stylesheets/user/user.css
+++ b/app/assets/stylesheets/user/user.css
@@ -1,3 +1,4 @@
+/* devise/registrations.sessions */
 .account-page .account-page__inner {
   width: 980px;
   margin: 60px auto;
@@ -101,28 +102,6 @@
   background-color: #d65f4c;
 }
 
-#error_explanation {
-  margin: 20px 0;
-  padding: 20px 30px;
-  border: 1px solid #ddd;
-  border-radius: 2px;
-}
-#error_explanation h2 {
-  margin-bottom: 10px;
-  color: #d65f4c;
-  font-size: 14px;
-}
-#error_explanation ul {
-  margin: 0;
-  padding-left: 17px;
-  list-style: square;
-}
-#error_explanation li {
-  margin: 0;
-  padding: 0;
-  font-size: 13px;
-}
-
 .guest-user {
   font-size: 40px;
   margin-top: 80px;
@@ -157,11 +136,12 @@
 }
 
 .google-omniauth {
-  text-decoration: none;
-  border: 1px solid #228B22;
-  padding: 10px;
-  color: #fff;
-  background-color: #228B22;
-  font-size: 20px;
+  border: none;
+  background: transparent;
+}
 
+/* edit.html.erb */
+.main-container {
+  display: flex;
+  justify-content: space-around;
 }
