--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,62 +1,59 @@
 <%= render "shared/header" %>
 
-<% if current_user.email == 'guest@example.com'%>
-  <p class="guest-user">ゲストユーザーはユーザー情報の編集ができません。</p>
-<% else %>
-<div class='account-page' id='account-page'>
-  <div class='account-page__inner clearfix'>
-    <div class='account-page__inner--left account-page__header'>
-      <h2>Edit Account</h2>
-      <h5>アカウントの編集</h5>
-      <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn'%>
-      <%= link_to "トップに戻る", root_path, class: 'btn'%>
-    </div>
-    <div class='account-page__inner--right user-form'>
-      <%= form_with model: current_user, local: true do |f|%>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :nickname%>
-          </div>
-          <div class='field-input'>
-            <%= f.text_field :nickname, autofocus: true%>
-          </div>
+<div class="edit-main-mypage">
+  <% if current_user.email == 'guest@example.com'%>
+    <p class="guest-user">ゲストユーザーはユーザー情報の編集ができません。</p>
+  <% else %>
+    <div class='account-page' id='account-page'>
+      <div class='account-page__inner clearfix'>
+        <div class='account-page__inner--left account-page__header'>
+          <h2>Edit Account</h2>
+          <h5>アカウントの編集</h5>
+          <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }, class: 'btn'%>
+          <%= link_to "トップに戻る", root_path, class: 'btn'%>
         </div>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :email%>
-          </div>
-          <div class='field-input'>
-            <%= f.email_field :email%>
-          </div>
-        </div>
-        <div class='actions'>
-          <%= f.submit "Update", class: 'btn'%>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
-
-<div class="container">
-  <p><%= current_user.nickname %>さんの投稿一覧</p>
-    <% if @articles.present? && @articles.any? %>
-      <ul class='item-lists'>
-        <% @articles.each do |article| %>
-          <li class='list'>
-            <div class="article-top-title">
-              <div class="prefecture-name-article">
-                <%= article.prefecture.name if article.prefecture %>
+        <div class='account-page__inner--right user-form'>
+          <%= form_with model: current_user, local: true do |f|%>
+            <div class='field'>
+              <div class='field-label'>
+                <%= f.label :nickname%>
               </div>
-              <div class="edit-article-title">
-                <%= article.title %>
-              </div>
-              <div class="article-nickname">
-                <%= article.user.nickname %> さん
+              <div class='field-input'>
+                <%= f.text_field :nickname, autofocus: true%>
               </div>
             </div>
+            <div class='field'>
+              <div class='field-label'>
+                <%= f.label :email%>
+              </div>
+              <div class='field-input'>
+                <%= f.email_field :email%>
+              </div>
+            </div>
+            <div class='actions'>
+              <%= f.submit "Update", class: 'btn'%>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
-              <div class="img-upload">
-                <%= image_tag(article.image, :size =>'500x700') if article.image.attached? %>
+  <p class="edit-article-list">[<%= current_user.nickname %>さんの投稿記事一覧]</p>
+    <div class="edit-container">
+      <% if @articles.present? && @articles.any? %>
+        <ul class='item-lists'>
+          <% @articles.each do |article| %>
+            <li class='list'>
+              <div class="article-top-title">
+                <div class="prefecture-name-article">
+                  <%= article.prefecture.name if article.prefecture %>
+                </div>
+                <div class="edit-article-title">
+                  <%= article.title %>
+                </div>
+              </div>
+              <div class="edit-img-upload">
+                <%= image_tag(article.image, width: '90%', height: '90%') if article.image.attached? %>
               </div>
 
               <div class="article-sub">
@@ -68,7 +65,7 @@
                 </div>
 
                 <div class="field">
-                   <strong class="strong">チェックアウト日:</strong>
+                  <strong class="strong">チェックアウト日:</strong>
                   <div class="article-container">
                     <%= article.check_out %>
                   </div>
@@ -109,7 +106,6 @@
                     <%= article.content %>
                   </div>
                 </div>
-              
               <div class="edit-destroy">
                 <% if user_signed_in? && current_user.id == article.user_id %>
                   <%= link_to "編集", edit_article_path(article.id), method: :get, class: "article-edit-btn" %>
@@ -118,12 +114,16 @@
                 <% end %>
               </div>
             </li>
+          <% end %>
+          </ul>
+      <% else %>
+        <p>投稿した記事はありません。</p>
       <% end %>
-        </ul>
-    <% else %>
-      <p>No travel articles available.</p>
-    <% end %>
-  </div>
-<% end %>
-
+      <div class="new-btns">
+        <%= link_to '戻る', root_path, class: "back-article-btn" %>
+      </div>
+      <div class="space"></div>
+    </div>
+  <% end %>
+</div>
 <%= render "shared/footer" %>
