--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,11 @@
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/japan-map-js@1.0.1/dist/jpmap.min.js"></script>
     <!--<script type="text/javascript" src="prefectures/jpmap.min.js"></script>-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   </head>
 
   <body>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <%= yield %>
   </body>
 </html>
