--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
   <body>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script type="module" src="<%= asset_path('swiper.js') %>"></script>
     <%= yield %>
   </body>
 </html>
