--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -52,8 +52,15 @@
                   <%= article.title %>
                 </div>
               </div>
-              <div class="edit-img-upload">
-                <%= image_tag(article.image, width: '90%', height: '90%') if article.image.attached? %>
+             <div class="swiper-container">
+                <div class= "swiper-wrapper img-index">
+                  <% article.images.each do |image| %>
+                  <%= image_tag image, class: "swiper-slide index-img" %>
+                  <% end %>
+                </div>
+                <div class="swiper-button-prev swiper-button-white"></div>
+                <div class="swiper-button-next swiper-button-white"></div>
+                <div class="swiper-pagination"></div>
               </div>
 
               <div class="article-sub">
