--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -15,7 +15,11 @@
 }
 
 
-.img-upload, .field {
+.img-upload {
+  margin-bottom: 30px;
+}
+
+.field {
   margin-bottom: 20px;
 }
 
@@ -32,6 +36,7 @@
   border: 2px dashed #ddd;
   padding: 10px;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .wide-text-area {
