--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -8,9 +8,7 @@
           <p>
             クリックしてファイルをアップロード
           </p>
-          <%= f.file_field :image, id:"item-image" %>
-        </div>
-        <%= image_tag(@article.image, :size =>'500x700') if @article.image.attached? %>
+        <%= f.file_field :images, multiple: true %>
       </div>
 
       <div class="field">
