--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -1,6 +1,5 @@
 .main-articles {
   padding-top: 100px;
-  padding-bottom: 100px; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -16,6 +15,7 @@
 
 
 .img-upload {
+  margin-top: -200px;
   margin-bottom: 30px;
 }
 
