--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -8,54 +8,79 @@
           <p>
             クリックしてファイルをアップロード
           </p>
-        <%= f.file_field :images, multiple: true %>
+            <%= f.file_field :images, name: 'article[images][]', data: {index: 0} %>
+            <%= f.file_field :images, name: 'article[images][]', data: {index: 1} %>
+            <%= f.file_field :images, name: 'article[images][]', data: {index: 2} %>
+        </div>
       </div>
 
       <div class="field">
-        <%= f.label :prefecture_id %>
-        <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, prompt: "Select a prefecture" %>
+        <div class="label-container">
+          <%= f.label :都道府県 %>
+          <span class="indispensable">必須</span>
+        </div>
+          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, prompt: "Select a prefecture" %>
       </div>
-
       <div class="field">
-        <%= f.label :title %>
+        <div class="label-container">
+          <%= f.label :タイトル %>
+          <span class="indispensable">必須</span>
+        </div>
         <%= f.text_field :title %>
       </div>
-
-      <div class="field">
-        <%= f.label :check_in %>
-        <%= f.date_field :check_in %>
+      <div class="check">
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :チェックイン, class: "wide-label" %>
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.date_field :check_in %>
+        </div>
+        <div class="field">
+          <div class="label-container">
+            <%= f.label :チェックアウト, class: "wide-label" %>
+            <span class="indispensable">必須</span>
+          </div>
+          <%= f.date_field :check_out %>
+        </div>
       </div>
-
       <div class="field">
-        <%= f.label :check_out %>
-        <%= f.date_field :check_out %>
-      </div>
-
-      <div class="field">
-        <%= f.label :partner %>
+        <div class="label-container">
+          <%= f.label :パートナー %>
+          <span class="indispensable">必須</span>
+        </div>
         <%= f.collection_select(:partner_id, Partner.all, :id, :name, {}, {class:"select-box"})%>
       </div>
-
       <div class="field">
-        <%= f.label :price %>
+        <div class="label-container">
+          <%= f.label :宿泊先 %>
+        </div>
+        <%= f.text_field :hotel %>
+      </div>
+      <div class="field">
+        <div class="label-container">
+          <%= f.label :料金 %>
+          <span class="indispensable">必須</span>
+        </div>
         <%= f.number_field :price %>
       </div>
-
       <div class="field">
-        <%= f.label :travel_site %>
-        <%= f.collection_select(:travel_site_id, TravelSite.all, :id, :name, {}, {class:"select-box"})%>
+        <div class="label-container">
+          <%= f.label :旅行サイト %>
+        </div>
+          <%= f.collection_select(:travel_site_id, TravelSite.all, :id, :name, {}, {class:"select-box"})%>
       </div>
-
       <div class="field">
-        <%= f.label :content %>
-        <%= f.text_area :content %>
+        <%= f.label :内容 %>
+        <span class="indispensable">必須</span>
+        <%= f.text_area :content, class: "wide-text-area" %>
       </div>
 
       <div class="actions">
         <%= f.submit "編集する", class: "new-article-btn" %>
       </div>
       <div class="actions">
-        <%= link_to '戻る', root_path, class: "back-btn" %>
+        <%= link_to '戻る', edit_user_path(current_user), class: "back-btn" %>
       </div>
     </div>
   <% end %>
