--- a/app/assets/stylesheets/prefecture/prefecture.css
+++ b/app/assets/stylesheets/prefecture/prefecture.css
@@ -9,7 +9,7 @@
 }
 
 .map-sub {
-  margin-left: 40px;
+  margin-left: 50px;
 }
 
 .map {
@@ -19,15 +19,16 @@
   
   }
   
-
 @media (min-width: 768px) {
   .map {
-    width: 30%;
-    max-width: none; 
+    width: 50%;
+  }
+
+  .cta_btn03 {
+    max-width: 350px;
   }
 }
-
-
+  
 .map-title {
   font-size: 5vh;
   border-bottom: solid 3px black; 
@@ -369,6 +370,10 @@
 
 .sample-show-img-upload {
   margin-left: 50px;
+}
+
+.sample-p {
+  font-weight: 900;
 }
 
 
