--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -4,6 +4,11 @@
   <%= form_with(model: @article, local: true) do |f| %>
     <div class="sub-articles">
       <div class="img-upload">
+        <div class="img-upload">
+          <div class="weight-bold-text">
+            商品画像(3枚まで)
+          <span class="indispensable">必須</span>
+        </div>
         <div class="click-upload">
           <p>
             クリックしてファイルをアップロード
@@ -13,7 +18,6 @@
             <%= f.file_field :images, name: 'article[images][]', data: {index: 2} %>
         </div>
       </div>
-
       <div class="field">
         <div class="label-container">
           <%= f.label :都道府県 %>
