--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="https://unpkg.com/japan-map-js@1.0.1/dist/jpmap.min.js"></script>
     <!--<script type="text/javascript" src="prefectures/jpmap.min.js"></script>-->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <%= javascript_include_tag 'application' %>
+     <%= javascript_importmap_tags %>
   </head>
 
   <body>
