--- a/app/assets/stylesheets/user/user.css
+++ b/app/assets/stylesheets/user/user.css
@@ -38,6 +38,7 @@
   color: #fff;
   background-color: #ccc;
   font-size: 14px;
+  text-decoration: none;
 }
 .account-page .field {
   margin-bottom: 10px;
