--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -72,4 +72,15 @@
   border-radius: 5px;
 }
 
+.edit-back-btn {
+  display: block;
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #C0C0C0;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 5px;
+}
+
 
