--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -84,7 +84,7 @@
         <%= f.submit "編集する", class: "new-article-btn" %>
       </div>
       <div class="actions">
-        <%= link_to '戻る', edit_user_path(current_user), class: "back-btn" %>
+        <%= link_to '戻る', edit_user_path(current_user), class: "edit-back-btn" %>
       </div>
     </div>
   <% end %>
