--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -8,7 +8,7 @@ header.header {
   right: 0;
   height: 70px;
   background-color: #87CEFA;
-  z-index: 2; 
+  z-index: auto; 
 }
 
 
@@ -59,7 +59,6 @@ header.header .user_nav .user__info {
   border: 1px solid #d8d8d8;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
   background-color: #fff;
-  z-index: 3; 
 }
 
 header.header .user_nav span:after {
