--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? && article.liked_by?(current_user)%>
-  <%=link_to "いいね済", article_likes_path(article.id),  data: { turbo_method: :delete }, class: "tweet_likes" , remote: true %> <%= article.likes.count %>
+  <%=link_to "いいね済", article_likes_path(article.id),  data: { turbo_method: :delete }, class: "tweet_likes" %> <%= article.likes.count %>
 <% else %>
-  <%=link_to "いいねする", article_likes_path(article.id), data: { turbo_method: :post }, class: "tweet_likes" , remote: true %> <%= article.likes.count %>
+  <%=link_to "いいねする", article_likes_path(article.id), data: { turbo_method: :post }, class: "tweet_likes" %> <%= article.likes.count %>
 <% end %>
