render-build.sh編集,ビューの編集

--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -51,17 +51,9 @@
   margin-right: 20px;
 }
 
-.new-article-btn {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 145px;
-  background-color: #4285f4;
-  color: #fff;
-  text-align: center;
-  border-radius: 5px;
-}
 
-.edit-back-btn {
+
+.back-article-btn {
   display: block;
   margin-top: 20px;
   padding: 10px;
@@ -69,6 +61,6 @@
   color: #fff;
   text-decoration: none;
   text-align: center;
-  border-radius: 5px 
+  border-radius: 5px;
 }
 
