--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -81,10 +81,10 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "編集する", class: "new-article-btn" %>
+        <%= f.submit "編集する", class: "new-btn" %>
       </div>
       <div class="actions">
-        <%= link_to '戻る', edit_user_path(current_user), class: "edit-back-btn" %>
+        <%= link_to '戻る', edit_user_path(current_user), class: "back-article-btn" %>
       </div>
     </div>
   <% end %>
