--- a/app/assets/stylesheets/user/user.css
+++ b/app/assets/stylesheets/user/user.css
@@ -179,26 +179,19 @@
   justify-content: space-around;
 }
 
-.new-btn,
-.back-article-btn {
+.new-btn {
   text-decoration: none;
   border: 1px solid #4285f4;
   color: #FFFFFF;
   background-color: #4285f4;
   text-align: center;
-  margin: 10px;
-  transition: background-color 0.3s ease; 
+  margin: 10px; 
   display: inline-block;
   cursor: pointer;
+  border-radius: 5px;
 }
 
-.new-btn {
-  height: 40px;
-  padding: 10px 70px;
-  border: 1px solid #4285f4;
-  color: #FFFFFF;
-  background-color: #4285f4;
-}
+
 
 .back-article-btn {
   padding: 10px 70px; 
