--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -51,9 +51,27 @@
   margin-right: 20px;
 }
 
+.new-article-btn {
+  display: block;
+  margin-top: 20px;
+  padding: 10px 145px;
+  background-color: #4285f4;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+}
 
+.new-btn {
+  display: block;
+  margin-top: 20px;
+  padding: 10px 145px;
+  background-color: #4285f4;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+}
 
-.back-article-btn {
+.edit-back-btn {
   display: block;
   margin-top: 20px;
   padding: 10px;
@@ -63,4 +81,16 @@
   text-align: center;
   border-radius: 5px;
 }
+
+.back-btn {
+  display: block;
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #C0C0C0;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 5px;
+}
+
 
