ビューの編集

--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -64,7 +64,7 @@
 .new-btn {
   display: block;
   margin-top: 20px;
-  padding: 10px 145px;
+  padding: 10px;
   background-color: #4285f4;
   color: #fff;
   text-align: center;
