--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -39,97 +39,97 @@
     </div>
 
   <p class="edit-article-list">[<%= current_user.nickname %>さんの投稿記事一覧]</p>
-    <div class="edit-container">
-      <% if @articles.present? && @articles.any? %>
-        <ul class='item-lists'>
-          <% @articles.each do |article| %>
-            <li class='list'>
-              <div class="article-top-title">
-                <div class="prefecture-name-article">
-                  <%= article.prefecture.name if article.prefecture %>
-                </div>
-                <div class="edit-article-title">
-                  <%= article.title %>
-                </div>
+  <div class="show-container">
+  <% if @articles.present? && @articles.any? %>
+    <ul class='show-item-lists'>
+      <% @articles.each do |article| %>
+        <li class='show-list'>
+            <div class="article-top-title">
+              <div class="prefecture-name-article">
+                <%= article.prefecture.name if article.prefecture %>
               </div>
-              <div class="swiper-container">
-                <div class="swiper-wrapper img-index">
-                  <% article.images.each do |image| %>
-                    <%= image_tag image, class: "swiper-slide index-img" %>
-                  <% end %>
-                </div>
-                <div class="swiper-button-prev swiper-button-white"></div>
-                <div class="swiper-button-next swiper-button-white"></div>
-                <div class="swiper-pagination"></div>
+              <div class="edit-article-title">
+                <%= article.title %>
               </div>
-              <div class="article-sub">
-                <div class="field">
-                  <strong class="strong">チェックイン日:</strong>
-                  <div class="article-container">
-                    <%= article.check_in %>
-                  </div>
-                </div>
+            </div>
 
-                <div class="field">
-                  <strong class="strong">チェックアウト日:</strong>
-                  <div class="article-container">
-                    <%= article.check_out %>
-                  </div>
-                </div>
-                <div class="field">
-                  <strong class="strong">パートナー:</strong>
-                  <div class="article-container">
-                    <%= article.partner.name %>
-                  </div>
-                </div>
+          <div class="swiper-container">
+            <div class="swiper-wrapper img-index">
+              <% article.images.each do |image| %>
+                <%= image_tag image, class: "swiper-slide index-img" %>
+              <% end %>
+            </div>
+            <div class="swiper-button-prev swiper-button-white"></div>
+            <div class="swiper-button-next swiper-button-white"></div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <div class="article-sub">
+            <div class="field">
+              <strong class="strong">チェックイン日:</strong>
+              <div class="article-container">
+                <%= article.check_in %>
               </div>
-              
-              <div class="article-sub">
-                <div class="field">
-                  <strong class="strong">料金:</strong>
-                  <div class="article-container">
-                    <%= article.price %>
-                  </div>
-                </div>
-                <div class="field">
-                  <strong class="strong">旅行サイト:</strong>
-                  <div class="article-container">
-                    <%= article.travel_site.name if article.travel_site %>
-                  </div>
-                </div>
-              </div>
+            </div>
 
-                <div class="field">
-                  <strong class="strong">宿泊先:</strong>
-                  <div class="article-hotel">
-                    <%= article.hotel if article.hotel %>
-                  </div>
-                </div>
-
-                <div class="field">
-                  <strong class="strong">見どころ:</strong>
-                  <div class="article-content">
-                    <%= article.content %>
-                  </div>
-                </div>
-              <div class="edit-destroy">
-                <% if user_signed_in? && current_user.id == article.user_id %>
-                  <%= link_to "編集", edit_article_path(article.id), method: :get, class: "article-edit-btn" %>
-                  <p class="or-text">or</p>
-                  <%= button_to "削除", article_path(article.id), method: :delete, class:"article-destroy-btn" %>
-                <% end %>
+            <div class="field">
+              <strong class="strong">チェックアウト日:</strong>
+              <div class="article-container">
+                <%= article.check_out %>
               </div>
-            </li>
-          <% end %>
-          </ul>
-      <% else %>
-        <p>投稿した記事はありません。</p>
+            </div>
+            <div class="field">
+              <strong class="strong">パートナー:</strong>
+              <div class="article-container">
+                <%= article.partner.name %>
+              </div>
+            </div>
+          </div>
+          
+          <div class="article-sub">
+            <div class="field">
+              <strong class="strong">料金:</strong>
+              <div class="article-container">
+                <%= article.price %>
+              </div>
+            </div>
+            <div class="field">
+              <strong class="strong">旅行サイト:</strong>
+              <div class="article-container">
+                <%= article.travel_site.name if article.travel_site %>
+              </div>
+            </div>
+          </div>
+
+            <div class="field">
+              <strong class="strong">宿泊先:</strong>
+              <div class="article-hotel">
+                <%= article.hotel if article.hotel %>
+              </div>
+            </div>
+
+            <div class="field">
+              <strong class="strong">見どころ:</strong>
+              <div class="article-content">
+                <%= article.content %>
+              </div>
+            </div>
+          <div class="edit-destroy">
+            <% if user_signed_in? && current_user.id == article.user_id %>
+              <%= link_to "編集", edit_article_path(article.id), method: :get, class: "article-edit-btn" %>
+              <p class="or-text">or</p>
+              <%= button_to "削除", article_path(article.id), method: :delete, class:"article-destroy-btn" %>
+            <% end %>
+          </div>
+        </li>
       <% end %>
-      <div class="new-btns">
-        <%= link_to '戻る', root_path, class: "back-article-btn" %>
-      </div>
-      <div class="space"></div>
-    </div>
+    </ul>
+  <% else %>
+    <p>[ 投稿した記事はありません]</p>
   <% end %>
+  <div class="new-btns">
+    <%= link_to '戻る', root_path, class: "back-article-btn" %>
+  </div>
+  <div class="space"></div>
+ <% end %>
 </div>
 <%= render "shared/footer" %>
