--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,8 +37,9 @@
         </div>
       </div>
     </div>
-
+<div class="article-new-btn">
   <p class="edit-article-list">[<%= current_user.nickname %>さんの投稿記事一覧]</p>
+</div>
   <div class="show-container">
   <% if @articles.present? && @articles.any? %>
     <ul class='show-item-lists'>
