ビューの編集

--- a/app/assets/stylesheets/article/article.css
+++ b/app/assets/stylesheets/article/article.css
@@ -61,13 +61,30 @@
   border-radius: 5px;
 }
 
-
+.new-btn {
+  text-decoration: none;
+  border: 1px solid #4285f4;
+  color: #FFFFFF;
+  margin-top: 20px;
+  padding: 10px 50px;
+  background-color: #4285f4;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+  display: inline-block;
+  cursor: pointer;
+}
 
 .back-article-btn {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 50px;
+  text-decoration: none;
   border: 1px solid #C0C0C0;
   color: #FFFFFF;
   background-color: #C0C0C0;
   border-radius: 5px;
+  text-align: center;
 }
 
 .edit-back-btn {
